# zed_notes_plugin

./: .gitignore  Cargo.toml  README.md  extension.toml
src/: crypto.rs  git.rs  lib.rs  ui.rs
